--- a/conf/base.config
+++ b/conf/base.config
@@ -1,8 +1,8 @@
 process {
 
-    cpus   = { check_max( 1    * task.attempt, 'cpus'   ) }
-    memory = { check_max( 4.GB * task.attempt, 'memory' ) }
-    time   = { check_max( 4.h  * task.attempt, 'time'   ) }
+    cpus   = { 1        * task.attempt }
+    memory = { 4.GB     * task.attempt }
+    time   = { 4.h      * task.attempt }
 
     errorStrategy = { task.exitStatus in [143,137,104,134,139] ? 'retry' : 'finish' }
     maxRetries    = 1
@@ -12,39 +12,48 @@ process {
         executor = 'local'
         cpus     = 1
     }
+
     withLabel:process_single {
-        cpus   = { check_max( 1                  , 'cpus'    ) }
-        memory = { check_max( 4.GB * task.attempt, 'memory'  ) }
-        time   = { check_max( 4.h  * task.attempt, 'time'    ) }
+        cpus   = { 1        * task.attempt }
+        memory = { 4.GB     * task.attempt }
+        time   = { 1.h      * task.attempt }
     }
+
     withLabel:process_low {
-        cpus   = { check_max( 2     * task.attempt, 'cpus'    ) }
-        memory = { check_max( 12.GB * task.attempt, 'memory'  ) }
-        time   = { check_max( 4.h   * task.attempt, 'time'    ) }
+        cpus   = { 3        * task.attempt }
+        memory = { 12.GB    * task.attempt }
+        time   = { 4.h      * task.attempt }
     }
+
     withLabel:process_medium {
-        cpus   = { check_max( 6     * task.attempt, 'cpus'    ) }
-        memory = { check_max( 36.GB * task.attempt, 'memory'  ) }
-        time   = { check_max( 8.h   * task.attempt, 'time'    ) }
+        cpus   = { 12       * task.attempt }
+        memory = { 50.GB    * task.attempt }
+        time   = { 8.h      * task.attempt }
     }
+
     withLabel:process_high {
-        cpus   = { check_max( 12    * task.attempt, 'cpus'    ) }
-        memory = { check_max( 72.GB * task.attempt, 'memory'  ) }
-        time   = { check_max( 16.h  * task.attempt, 'time'    ) }
+        cpus   = { 12       * task.attempt }
+        memory = { 100.GB   * task.attempt }
+        time   = { 12.h     * task.attempt }
     }
+
     withLabel:process_long {
-        time   = { check_max( 20.h  * task.attempt, 'time'    ) }
+        time   = { 20.h     * task.attempt }
     }
+
     withLabel:process_high_memory {
-        memory = { check_max( 200.GB * task.attempt, 'memory' ) }
+        memory = 170.GB
     }
+
     withLabel:error_ignore {
         errorStrategy = 'ignore'
     }
+
     withLabel:error_retry {
         errorStrategy = 'retry'
-        maxRetries    = 2
+        maxRetries    = 3
     }
+
     withName:CUSTOM_DUMPSOFTWAREVERSIONS {
         cache = false
     }
