Activate base.config

--- a/nextflow.config
+++ b/nextflow.config
@@ -3,16 +3,19 @@ manifest {
     author = 'Jelmer Poelstra'
 }
 
-//includeConfig conf/base.config
+includeConfig conf/base.config
 
 // Param defaults
 params {
     outdir                      =   "results/nf_asm_prep"
 
     fast5_dir                   =   false
-    ref_assembly                =   false
     guppy_config                =   false
+    ref_assembly                =   false
+    
     organel_contigs             =   false
+    pyco_minq                   =   false
+    pyco_minlen                 =   1000
 
     tracedir                    =   "$params.outdir/trace"
     help                        =   false
@@ -42,14 +45,14 @@ profiles {
 
     normal {
         process {
-            cpus                =   { 12 * task.attempt }
-            memory              =   { 48.GB * task.attempt }
-            time                =   { 10.hour * task.attempt }
+            cpus                =   { 8 * task.attempt }
+            memory              =   { 32.GB * task.attempt }
+            time                =   { 5.hour * task.attempt }
 
             withName: 'GUPPY' {
+                clusterOptions  =   '--account=PAS0471 --gpus-per-node=2'
                 cpus            =   1
                 memory          =   4.GB
-                clusterOptions  =   '--account=PAS0471 --gpus-per-node=2'
                 time            =   1.hour
             }
             withName: 'PYCOQC' {
