Refer to contig blacklist, not organelles per se

--- a/nextflow.config
+++ b/nextflow.config
@@ -13,7 +13,7 @@ params {
     guppy_config                =   false
     ref_assembly                =   false
     
-    organel_contigs             =   false
+    contig_blacklist            =   false
     pyco_minq                   =   false
     pyco_minlen                 =   1000
 
