--- a/nextflow.config
+++ b/nextflow.config
@@ -3,7 +3,7 @@ manifest {
     author = 'Jelmer Poelstra'
 }
 
-includeConfig conf/base.config
+//includeConfig conf/base.config
 
 // Param defaults
 params {
@@ -14,7 +14,7 @@ params {
     ref_assembly                =   false
     
     contig_blacklist            =   false
-    pyco_minq                   =   false
+    pyco_minq                   =   10
     pyco_minlen                 =   1000
 
     tracedir                    =   "$params.outdir/trace"
@@ -25,13 +25,24 @@ params {
 process {
     executor                    =   'slurm'
     clusterOptions              =   '--account=PAS0471'
-    errorStrategy               =   { task.attempt <= 0 ? 'retry' : 'terminate' }
-    maxRetries                  =   0
+    errorStrategy               =   { task.attempt <= 2 ? 'retry' : 'terminate' }
+    maxRetries                  =   2
 
     withLabel: 'local_process' {
         executor                =   'local'
         cpus                    =   1
         memory                  =   '4 GB'
+    }
+
+    withName: 'GUPPY' {
+        clusterOptions          =   '--account=PAS0471 --gpus-per-node=2'
+        cpus                    =   1
+        memory                  =   4.GB
+        time                    =   1.hour
+    }
+    
+    withName: 'PYCOQC' {
+        conda                   =  "/fs/ess/PAS0471/jelmer/conda/pycoqc-2.5.2"
     }
 }
 
@@ -48,25 +59,15 @@ profiles {
             cpus                =   { 8 * task.attempt }
             memory              =   { 32.GB * task.attempt }
             time                =   { 5.hour * task.attempt }
-
-            withName: 'GUPPY' {
-                clusterOptions  =   '--account=PAS0471 --gpus-per-node=2'
-                cpus            =   1
-                memory          =   4.GB
-                time            =   1.hour
-            }
-            withName: 'PYCOQC' {
-                conda           =  "/fs/ess/PAS0471/jelmer/conda/pycoqc-2.5.2"
-            }
         }
     }
 
     test {
         process {
             maxRetries          =   0
-            time                =   { 6.hour * task.attempt }
-            memory              =   { 32.GB * task.attempt }
-            cpus                =   { 8 * task.attempt }
+            time                =   { 1.hour * task.attempt }
+            memory              =   { 4.GB * task.attempt }
+            cpus                =   { 1 * task.attempt }
         }
     }
 }
