--- a/nextflow.config
+++ b/nextflow.config
@@ -3,12 +3,13 @@ manifest {
     author = 'Jelmer Poelstra'
 }
 
-//includeConfig conf/base.config
+includeConfig 'conf/base.config'
 
 // Param defaults
 params {
     outdir                      =   "results/nf_asm_prep"
 
+    run_id                      =   false
     fast5_dir                   =   false
     guppy_config                =   false
     ref_assembly                =   false
@@ -26,7 +27,10 @@ process {
     executor                    =   'slurm'
     clusterOptions              =   '--account=PAS0471'
     errorStrategy               =   { task.attempt <= 2 ? 'retry' : 'terminate' }
-    maxRetries                  =   2
+
+    cpus                        =   { 4 * task.attempt }
+    memory                      =   { 16.GB * task.attempt }
+    time                        =   { 2.hour * task.attempt }
 
     withLabel: 'local_process' {
         executor                =   'local'
@@ -54,17 +58,9 @@ profiles {
         }
     }
 
-    normal {
-        process {
-            cpus                =   { 8 * task.attempt }
-            memory              =   { 32.GB * task.attempt }
-            time                =   { 5.hour * task.attempt }
-        }
-    }
-
     test {
         process {
-            maxRetries          =   0
+            errorStrategy       =   'terminate'
             time                =   { 1.hour * task.attempt }
             memory              =   { 4.GB * task.attempt }
             cpus                =   { 1 * task.attempt }
